syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message DeleteProfileRequest {
  string id = 1;
  string password = 2;
}

message DeleteProfileResponse {
  string message = 1;
}
